# hong

./: CMakeLists.txt  Kconfig  prj.conf
boards/: nrf52840dk_nrf52840.overlay
src/: main.c
src/bsp/: CMakeLists.txt  Kconfig.bsp  bsp.c  bsp.h  bsp_config.h
src/config/: CMakeLists.txt  config.h  m_event_def.c  m_event_def.h  m_menu_id.h
src/module/: CMakeLists.txt  Kconfig.module  m_coordinator.c  m_coordinator.h
